# how-to-reload-online

./: .gitignore  README.md  pyproject.toml
core/: __init__.py  celery.py  gunicorn.py  settings.py  urls.py
project/: init.py  models.py  serializers.py  tasks.py  urls.py  views.py
project/migrations/: 0001_initial.py  0002_userproject.py  0003_alter_userproject_project_alter_userproject_user.py  0004_test.py
tests/: test01.py  test02.py  test03.py  test04.py
